authentification, se creo autentificacion de usuario para el put, delete y se puede crear y listar usuario

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "pancheta",
-    "password": "pancheta",
+    "username": "root",
+    "password": "root",
     "database": "pancheta_db",
     "host": "localhost",
     "dialect": "mysql"
