--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
