--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
@@ -17,6 +18,7 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.15.0"
+    "sequelize": "^6.15.0",
+    "sequelize-paginate": "^1.1.6"
   }
 }
