--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "eslint": "npx eslint . --ext .js"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +21,9 @@
     "nodemon": "^2.0.15",
     "sequelize": "^6.15.0",
     "sequelize-paginate": "^1.1.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0",
+    "prettier": "2.5.1"
   }
 }
