--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "mercadopago": "^1.5.12",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
@@ -24,6 +25,6 @@
   },
   "devDependencies": {
     "eslint": "^8.10.0",
-    "prettier": "2.5.1"
+    "prettier": "^2.5.1"
   }
 }
